# gir-experiment

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml
codegen/: Cargo.toml
codegen/src/: cli.rs  error.rs  main.rs
codegen/src/codegen/: mod.rs  nameutils.rs
codegen/src/codegen/auto/: aliases.rs  constants.rs  enums.rs  mod.rs
codegen/src/codegen/sys/: build.rs  lib.rs  mod.rs
codegen/src/config/: config.rs
codegen/src/templates/auto/: alias.rs  constants.rs  enums.rs  mod.rs
codegen/src/templates/sys/: lib.rs
config/: Cargo.toml
config/src/: config.rs  constant.rs  enums.rs  function.rs  lib.rs  member.rs  object.rs  property.rs  signal.rs
config/tests/: GLib-Gir.toml  parse.rs
parser/: Cargo.toml
parser/src/: alias.rs  array.rs  attribute.rs  bitfield.rs  boxed.rs  callback.rs  class.rs  constant.rs  enums.rs  field.rs  function.rs  function_macro.rs  interface.rs  lib.rs  member.rs  method.rs  namespace.rs  parameter.rs  property.rs  record.rs  repository.rs  return_value.rs  signal.rs  traits.rs  type.rs  union.rs  version.rs  virtual_method.rs
src/: alias.rs  array.rs  callback.rs  class.rs  cli.rs  constant.rs  enums.rs  error.rs  function.rs  function_macro.rs  interface.rs  main.rs  namespace.rs  property.rs  record.rs  repository.rs  signal.rs  transfer.rs  type.rs  union.rs  version.rs
src/config/: config.rs  mod.rs
src/parser/: alias.rs  array.rs  bitfield.rs  callback.rs  class.rs  constant.rs  enums.rs  function.rs  function_macro.rs  interface.rs  member.rs  mod.rs  namespace.rs  property.rs  record.rs  repository.rs  type.rs  (+4 more)
(+15 files in other folders)
