[package]
name = "gir-codegen"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = [ "cargo", "derive" ] }
parser.workspace = true
serde = { version = "1.0", features = ["derive"] }
tera = "1"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
