[package]
name = "gir-parser"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
xmlserde = { git = "https://github.com/bilelmoussaoui/xmlserde", branch = "bilelmoussaoui/de-fix" }
xmlserde_derives = { git = "https://github.com/bilelmoussaoui/xmlserde", branch = "bilelmoussaoui/de-fix" }
